# pyrfeqtly

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-and-push-devcontainer.yml
src/pyrfeqt/: __init__.py  __main__.py  canvases_widget.py  config_dialog.py  data_container.py  data_sources_groupbox.py  graph_layout_widget.py  graph_widgets.py  graphics_widget.py  main_window.py  plot_options_groupbox.py  widgets.py
tests/: gen_samples.py
