[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrfeqt"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Brian McClune", email = "bpmcclune@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Brian McClune/pyrfeqt#readme"
Issues = "https://github.com/Brian McClune/pyrfeqt/issues"
Source = "https://github.com/Brian McClune/pyrfeqt"

[tool.hatch.version]
path = "src/pyrfeqt/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pyrfeqt tests}"

[tool.coverage.run]
source_pkgs = ["pyrfeqt", "tests"]
branch = true
parallel = true
omit = [
  "src/pyrfeqt/__about__.py",
]

[tool.coverage.paths]
pyrfeqt = ["src/pyrfeqt", "*/pyrfeqt/src/pyrfeqt"]
tests = ["tests", "*/pyrfeqt/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
